tests/baselines/reference/parserForInStatement3.errors.txt
==== tests/cases/compiler/parserForInStatement3.ts (2 errors) ====
    for (var a, b in X) {
         ~~~~~~~~
!!! parserForInStatement3.ts(1,6): error TS1091: Only a single variable declaration is allowed in a 'for...in' statement.
                     ~
!!! parserForInStatement3.ts(1,18): error TS2095: Cannot find name 'X'.
    }